[project]
name = "fppanalysis"
version = "0.2.0"
description = "Analysis tools for time series"
authors = [
  { name = "gregordecristoforo", email = "gregor.decristoforo@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "matplotlib>=3.9.2",
    "mpmath>=1.3.0",
    "numpy>=2.0.2",
    "pywavelets>=1.6.0",
    "scipy>=1.13.1",
    "tqdm>=4.66.5",
]

[project.urls]
homepage = "https://github.com/uit-cosmo/fpp-analysis-tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
